macros/tests/ui/bad_entry_ret.stderr
error: `#[entry]` function must have signature `[unsafe] fn([<ident> : CriticalSection]) -> !`
 --> tests/ui/bad_entry_ret.rs:6:1
  |
6 | fn main() {}
  | ^^^^^^^^^
